Update remain features.